tests/ValidPrograms/Test12/test12.c
int main()
{
    int a, b, c, d;
    a = 17;
    b = 42;
    c = a*a + b*b + 1;
    return c;
}
