tests/SyntaxError/Test10/test9.c
int main(){

funct(1,1);

}

int funct (int b, int){
return b*b;
}
